[project]
name = "rcm2"
version = "0.1.0"
description = "rcm2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.2,<1.0.0"
]

[project.scripts]
rcm2 = "rcm2.main:run"
run_crew = "rcm2.main:run"
train = "rcm2.main:train"
replay = "rcm2.main:replay"
test = "rcm2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
